--- a/app/css/jquery.formstyler.theme.css
+++ b/app/css/jquery.formstyler.theme.css
@@ -17,7 +17,7 @@
 .jq-number__field input {
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
-	width: 126%;
+	width: 52px;
 	border: none;
 	outline: none;
 	background: none;
