--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1461,6 +1461,7 @@ html .ui-button.ui-state-disabled:focus{
             -ms-flex-direction: column;
                 flex-direction: column;
         padding-bottom: 10px;
+        padding-top: 0;
     }
     .footer .footer-panel {
         height: 400px;
